created christmas makupaketti page, updated order page, added background box in header text, changed makupaketti background photo

--- a/cervellata.html
+++ b/cervellata.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Makupaketti - Makulia</title>
+    <title>Cervellata - Makulia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,15 +51,12 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right product">
                     <li>
                         <a href="/">Etusivu</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#uutiset">Uutiset</a>
+                        <a href="makupaketti">Makupaketti</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
@@ -71,145 +68,75 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header class="makupaketti">
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1 id="homeHeading">Makupaketti</h1>
-                <hr>
-                <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a> -->
-                <br>
-                <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
-                    <i class="fa fa-3x fa-chevron-down white" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-    </header>
-
-<!--
-    <section class="bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Kokoamme joulukuun pakettia</h2>
-                    <hr class="light">
-                    <p class="text-faded">Seuraava Makupaketti toimitetaan viikolla 50. Se julkaistaan tällä sivulla marraskuun aikana!</p>
-                </div>
-            </div>
-        </div>
-    </section>
--->
-
-
 
     <section id="makupaketti">
-
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                    <h2 class="section-heading">Campanian joulu</h2>
+                <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                    <img src="img/products/cervellata.jpg" class="img-responsive" alt="Kuva: Soppressata di Gioi">
+                    <h2 class="section-heading">Cervellata</h2>
                     <hr class="primary">
-                    <p>Tämä Makupaketti tarjoaa mausteisen jouluisia makuja Cilenton kansallispuiston alueelta Campanian sydämestä.</p>
+                    <p class="product-summary">G.IOIn cervellata on ihanan pehmeän makuinen ilmakuivattu makkara. Se on maustettu lempeästi makealla chilillä, villifenkolin siemenillä, valkosipulilla, laakerinlehdillä sekä aavistuksella maksaa, joka sitoo maut täyteläisesti yhteen. Makkaraan käytettävä sianliha kasvatetaan vastuullisesti Gioin kylää ympäröivissä metsissä Cilenton kansallispuistossa.</p>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
             <div class="row">
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/scorzette-arancia.jpg" class="img-responsive" alt="Scorzette di arancia -kuva">
-                        <h3>Scorzette di arancia</h3>
-                        <p class="text-muted">Tummalla suklaalla kuorrutetut appelsiininkuoret vievät kielen mennessään</p>
-                    </div>
+                <div class="col-md-6 col-md-offset-3 product padding-top">
+                    <p>Cervellata sopii mainiosti <b>alkupalapöytään</b> miedohkojen ja keskivoimakkaiden juustojen kanssa. Viipaleet nautitaan italialaisittain vaalean maalaisleivän ja punaviinilasillisen kera. Muutama viipale ilmakuivattua makkaraa ja leipää yksinkertaisen pasta-annoksen jälkeen on myös yleinen näky.</p>
+                    <p>Tämä cervellata valmistetaan sian selästä ja siihen lisätään vaihtelevasti kinkkua, niskaa ja pekonia. Makkaran maku pyöristyy pehmeäksi maksalla, jonka vaivihkaista läsnäoloa ei helposti huomaa. Cervellata on tehty aitoon suoleen ja sitä on kypsytetty kuukauden ajan. Tämä makkara on valmistettu <strong>täysin käsityönä</strong>, eikä se sisällä lainkaan lisä- tai säilöntäaineita.</p>
+                    <p>Välimeren ruokavalioon kuuluu vähäinen lihan kulutus ja nautittava liha on Etelä-Italiassa usein juuri <strong>ilmakuivattua</strong>. Perinteiseen tapaan sika teurastettiin syksyllä, kun ilma alkoi olla viileämpi lihan käsittelyä varten. Lihaa kuivattiin, jotta sitä voisi nauttia koko tulevan vuoden.</p>
+                    <p>Näiden perinteiden mukaan Piccolo salumificio artigianale G.IOI valmistaa tuotteensa <strong>itse kasvattamistaan sioista</strong>. Siat elävät ulkona laajoilla Gioin kylää ympäröivillä mailla vain kiveheiton päässä itse tuotteiden valmistuspaikasta, joka on pieni keltainen talo kylän keskellä.</p>
+                    <hr class="primary">
                 </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="/cervellata"><img src="img/products/cervellata.jpg" class="img-responsive" alt="Cervellata -kuva"></a>
-                        <h3>Cervellata</h3>
-                        <p class="text-muted">Gioin cervellata on ihanan pehmeän makuinen ilmakuivattu makkara</p>
-                        <a href="/cervellata" class="more-link">Lue lisää...</a>
+                <div class="col-md-6 col-md-offset-3">
+                    <a href="#tuotetiedot" data-toggle="collapse"><h4 class="text-center">Tuotetiedot</h4></a>
+                    <div id="tuotetiedot" class="collapse">
+                        <div class="col-sm-6">
+                            <h5>Ainesosat</h5>
+                            <ul class="list-unstyled">
+                                <li>Sianliha <i>(kinkku, selkä, maksa)</i>, Italia</li>
+                                <li>Villifenkoli</li>
+                                <li>Valkosipuli</li>
+                                <li>Laakerinlehti</li>
+                                <li>Makea chili</li>
+                                <li>Merisuola</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6 tuotetiedot">
+                            <h5>Paino</h5>
+                            <p>N. 360 g</p>
+                            <p>Tuotteen paino vaihtelee hieman, sillä se on tehty käsityönä.</p>
+                        </div>
                     </div>
+                    
                 </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <!--<a href="/soppressata-di-gioi">--><img src="img/products/valiaika-castagne.jpg" class="img-responsive" alt="Castagne del Prete -kuva"><!--</a>-->
-                        <h3>Castagne del Prete</h3>
-                        <p class="text-muted">Hitaasti paahdettuja kastanjoita</p>
-                        <!--<a href="/soppressata-di-gioi" class="more-link">Lue lisää...</a>-->
-                    </div>
+                <div class="col-xs-12">
+                    <hr class="primary">
                 </div>
-
-                <div class="clearfix"></div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/alici-menaica-sottolio.jpg" class="img-responsive" alt="Alici di Menaica -kuva">
-                        <h3>Alici di Menaica sott'olio</h3>
-                        <p class="text-muted">Menaican sardelleja oliiviöljyssä</p>
-                    </div>
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <p>Tämän tuotteen löydät Campanian joulu -Makupaketista.</p>
+                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti</a>
                 </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/fichi-mandorle-limone.jpg" class="img-responsive" alt="Fichi secchi -kuva">
-                        <h3>Fichi secchi, mandorle, limone</h3>
-                        <p class="text-muted">Kuivattuja Cilenton vaaleita viikunoita manteleilla ja sitruunalla</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/sugo-basilico.jpg" class="img-responsive" alt="Sugo al basilico -kuva">
-                        <h3>Sugo al Basilico</h3>
-                        <p class="text-muted">Tomaattikastike basilikalla</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-md-offset-3 col-lg-offset-4 text-center">
-                    <div class="service-box">
-                        <img src="img/products/frollini-carrube.jpg" class="img-responsive" alt="Frollini carrube -kuva">
-                        <h3>Frollini Carrube</h3>
-                        <p class="text-muted">Pikkuleipiä johanneksenleipäpuujauhoista</p>
-                    </div>
-                </div>
-
             </div>
         </div>
 
+
+        <!--
         <div class="container" style="padding-top: 25px">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="primary">
-                    <h2 class="section-heading">69 €</h2>
-                    <p>Toimitettuna kotiovellesi Helsingissä</p>
-                    <hr class="primary">
-                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian joulu -paketti on tilattavissa 12.12. saakka ja se toimitetaan sinulle 20.12. mennessä.</p>
+                    <p>Makupaketti toimitetaan sinulle lokakuussa Helsinkiin. Valikoima vaihtuu joka toinen kuukausi. Campanian syksy -paketti on tilattavissa syyskuun ajan.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
                 </div>
             </div>
         </div>
-
+        -->
     </section>
 
 
-    <section class="bg-primary" id="uutiset">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Makulian Uutiset</h2>
-                    <hr class="light">
-                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
-                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 <!--
         <div class="container">
             <div class="row">
@@ -224,55 +151,59 @@
             </div>
         </div>
     </section>
-
+-->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/cilento.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/cilento.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/maiali-gioi2.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/maiali-gioi2.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Cilenton kansallispuisto
                                 </div>
                                 <div class="project-name">
-                                    Golfo di Policastro, Salerno
+                                    Täällä kasvavat Gioin siat
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/birds.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/birds.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/thumbnails/antipasto.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/antipasto.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Yhdistä
                                 </div>
                                 <div class="project-name">
-                                    Maanviljelyä kansallispuistossa
+                                    Juuston ja aurinkokuivattujen tomaattien kanssa alkupaloiksi, nauti tuoreen leivän kera
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/capicollo.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/capicollo.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/view-gioi.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/view-gioi.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Cilenton kansallispuisto
                                 </div>
                                 <div class="project-name">
-                                    Capicollo, porsaan niska
+                                    Näkymä Gioista
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+                <!--
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/carciofini.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/carciofini.jpg" class="img-responsive" alt="">
@@ -318,10 +249,24 @@
                         </div>
                     </a>
                 </div>
+                -->
             </div>
         </div>
     </section>
--->
+
+    <section class="bg-primary" id="uutiset">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Makulian Uutiset</h2>
+                    <hr class="light">
+                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 <!--
     <aside class="bg-dark">
         <div class="container text-center">
