--- a/tilaa.html
+++ b/tilaa.html
@@ -81,44 +81,47 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 product padding-top">
                     <!-- <h3 class="text-center">Tilaus sisältää</h3> -->
-                    <a href="/makupaketti"><h4>Campanian syksy -Makupaketti</h4></a>
+                    <a href="/makupaketti"><h4>Campanian joulu -Makupaketti</h4></a>
                     <ul class="list-unstyled product col-xs-11 col-xs-offset-1">
                         <li>
-                            <p><b>Cacioricotta caprino</b>, vuohenmaitojuusto, n. 330 g</p>
+                            <p><b>Scorzette di arancia</b>, appelsiininkuoria ja tummaa suklaata, n. 100 g </p>
                         </li>
                         <li>
-                            <p><b>Pomodorino Corbarino secco</b>, aurinkokuivattuja Corbarino-tomaatteja ekstra-neitsytoliiviöljyssä, 190 g</p>
+                            <p><a href="/cervellata" class="black"><b>Cervellata</b>, ilmakuivattu makkara, n. 360 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
                         </li>
                         <li>
-                            <p><a href="/soppressata-di-gioi" class="black"><b>Soppressata di Gioi</b>, kuivakypsytetty makkara, n. 260 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
+                            <p><!--<a href="/colatura-di-menaica" class="black">--><b>Castagne del Prete</b>, paahdettuja kastanjoita, 250 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
                         </li>
                         <li>
-                            <p><a href="/colatura-di-menaica" class="black"><b>Colatura di Menaica</b>, vaalea kalakastike, 100 ml <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
+                            <p><!--<a href="/colatura-di-menaica" class="black">--><b>Alici di Menaica sott'olio</b>, Menaican sardelleja oliiviöljyssä, 120 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
                         </li>
                         <li>
-                            <p><b>Olio extra vergine di Oliva</b>, oliiviöljy, 500 ml</p>
+                            <p><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla</p>
                         </li>
                         <li>
-                            <p><b>Freselle integrali</b>, käsin leivottuja korppuja, n. 300 g</p>
+                            <p><b>Sugo alle melanzane e peperoni Friarielli</b>, tomaattikastike munakoisolla ja Friarielli-paprikalla, 310 g</p>
+                        </li>
+                        <li>
+                            <p><b>Frollini Carrube</b>, pikkuleipiä johanneksenleipäpuujauhoista, 100 g</p>
                         </li>
                         <li>
                             <p><i>Vinkkejä ja reseptejä tuotteiden käyttöön</i></p>
                         </li>
                     </ul>
                     <h4>Kotiinkuljetus</h4>
-                    <p class="list-unstyled col-xs-11 col-xs-offset-1"><b>Helsinkiin</b> antamaasi osoitteeseen</p>
+                    <p class="list-unstyled col-xs-11 col-xs-offset-1"><b>Helsinkiin</b> antamaasi osoitteeseen 20.12. mennessä</p>
                 </div>
  
                 <div class="col-xs-12">
                     <hr class="primary">
                 </div>
                 <div class="col-md-6 col-md-offset-3 text-center">
-                    <p>Joulukuun Makupaketti julkaistaan pian. Tilaa alla Makulian Uutiset, niin saat tiedon heti kun Makupaketti on tilattavissa!</p>
-
-                    <!--
-                    <p class="product-summary">Verkkokaupassamme on käytössä PayPal. <a href="#ota-yhteytta">Ota yhteyttä</a>, jos tämä maksutapa ei sovi.</p>
-                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Siirry maksamaan</a>
+                    <!--<p>Joulukuun Makupaketti julkaistaan pian. Tilaa alla Makulian Uutiset, niin saat tiedon heti kun Makupaketti on tilattavissa!</p>
                     -->
+                    <h2 class="section-heading">69 €</h2>
+                    <p class="product-summary">Verkkokaupassamme on käytössä PayPal. <a href="#ota-yhteytta">Ota yhteyttä</a>, mikäli haluat mieluummin laskun.</p>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Siirry maksamaan</a>
+                    
                 </div>
             </div>
         </div>
