--- a/makupaketti-campanian-syksy.html
+++ b/makupaketti-campanian-syksy.html
@@ -80,13 +80,16 @@
                 <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a> -->
                 <br>
                 <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
-                    <i class="fa fa-3x fa-chevron-down white" aria-hidden="true"></i>
+                    <i class="fa fa-3x fa-chevron-down" aria-hidden="true"></i>
                 </a>
             </div>
         </div>
     </header>
 
 <!--
+
+-->
+
     <section class="bg-primary">
         <div class="container">
             <div class="row">
@@ -98,18 +101,15 @@
             </div>
         </div>
     </section>
--->
-
-
 
     <section id="makupaketti">
 
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                    <h2 class="section-heading">Campanian joulu</h2>
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Campanian syksy</h2>
                     <hr class="primary">
-                    <p>Tämä Makupaketti tarjoaa mausteisen jouluisia makuja Cilenton kansallispuiston alueelta Campanian sydämestä.</p>
+                    <p>Tämä Makupaketti tarjoaa pirskahtelevan tummia makuja loppukesän lämmöllä höystettynä.</p>
                 </div>
             </div>
         </div>
@@ -119,27 +119,26 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/scorzette-arancia.jpg" class="img-responsive" alt="Scorzette di arancia -kuva">
-                        <h3>Scorzette di arancia</h3>
-                        <p class="text-muted">Tummalla suklaalla kuorrutetut appelsiininkuoret vievät kielen mennessään</p>
+                        <img src="img/products/cacioricotta2.jpg" class="img-responsive" alt="Cacioricotta - italialainen vuohenmaitojuusto">
+                        <h3>Cacioricotta caprino</h3>
+                        <p class="text-muted">Kevyesti kypsytetty vuohenmaitojuusto</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <a href="/cervellata"><img src="img/products/cervellata.jpg" class="img-responsive" alt="Cervellata -kuva"></a>
-                        <h3>Cervellata</h3>
-                        <p class="text-muted">Gioin cervellata on ihanan pehmeän makuinen ilmakuivattu makkara</p>
-                        <a href="/cervellata" class="more-link">Lue lisää...</a>
+                        <img src="img/products/pomodorinic-and-bread.jpg" class="img-responsive" alt="Pomodorino Corbarino secco - Aurinkokuivattuja Corbarino-tomaatteja">
+                        <h3>Pomodorino Corbarino secco</h3>
+                        <p class="text-muted">Aurinkokuivattuja Corbarino-tomaatteja oliiviöljyssä</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <!--<a href="/soppressata-di-gioi">--><img src="img/products/valiaika-castagne.jpg" class="img-responsive" alt="Castagne del Prete -kuva"><!--</a>-->
-                        <h3>Castagne del Prete</h3>
-                        <p class="text-muted">Hitaasti paahdettuja kastanjoita</p>
-                        <!--<a href="/soppressata-di-gioi" class="more-link">Lue lisää...</a>-->
+                        <a href="/soppressata-di-gioi"><img src="img/products/soppressatadigioi.jpg" class="img-responsive" alt="Soppressata di Gioi - italialainen salamimakkara"></a>
+                        <h3>Soppressata di Gioi</h3>
+                        <p class="text-muted">Salamimakkara - etelän vastine prosciuttolle</p>
+                        <a href="/soppressata-di-gioi" class="more-link">Lue lisää...</a>
                     </div>
                 </div>
 
@@ -147,33 +146,26 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/alici-menaica-sottolio.jpg" class="img-responsive" alt="Alici di Menaica -kuva">
-                        <h3>Alici di Menaica sott'olio</h3>
-                        <p class="text-muted">Menaican sardelleja oliiviöljyssä</p>
+                        <img src="img/products/colatura.jpg" class="img-responsive" alt="Colatura di Menaica - Sardelleista puristettu kalakastike">
+                        <h3>Colatura di Menaica</h3>
+                        <p class="text-muted">Antiikin ajoista tunnettu kalakastike antamaan merellistä makua ruokiin</p>
+                        <a href="/colatura-di-menaica" class="more-link">Lue lisää...</a>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/fichi-mandorle-limone.jpg" class="img-responsive" alt="Fichi secchi -kuva">
-                        <h3>Fichi secchi, mandorle, limone</h3>
-                        <p class="text-muted">Kuivattuja Cilenton vaaleita viikunoita manteleilla ja sitruunalla</p>
+                        <img src="img/products/dione.jpg" class="img-responsive" alt="Kylmäpuristettu neitsytoliiviöljy">
+                        <h3>Olio extra vergine di oliva</h3>
+                        <p class="text-muted">Kylmäpuristettu neitsytoliiviöljy</p>
                     </div>
                 </div>
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/sugo-basilico.jpg" class="img-responsive" alt="Sugo al basilico -kuva">
-                        <h3>Sugo al Basilico</h3>
-                        <p class="text-muted">Tomaattikastike basilikalla</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-md-offset-3 col-lg-offset-4 text-center">
-                    <div class="service-box">
-                        <img src="img/products/frollini-carrube.jpg" class="img-responsive" alt="Frollini carrube -kuva">
-                        <h3>Frollini Carrube</h3>
-                        <p class="text-muted">Pikkuleipiä johanneksenleipäpuujauhoista</p>
+                        <img src="img/products/freselle.jpg" class="img-responsive" alt="Freselle integrale - täysjyväkorppu">
+                        <h3>Freselle integrali</h3>
+                        <p class="text-muted">Puu-uunissa paistettu käsin leivottu täysjyväkorppu</p>
                     </div>
                 </div>
 
@@ -187,10 +179,13 @@
                     <h2 class="section-heading">69 €</h2>
                     <p>Toimitettuna kotiovellesi Helsingissä</p>
                     <hr class="primary">
-                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian joulu -paketti on tilattavissa 12.12. saakka ja se toimitetaan sinulle 20.12. mennessä.</p>
+                    <p>Kokoamme juuri nyt joulun Makupakettia. Se julkaistaan tällä sivulla marraskuun aikana.</p>
+                    <!--
+                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian syksy -paketti on tilattavissa 30.10. saakka ja se toimitetaan sinulle 10.11. mennessä.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
                     <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                    -->
                 </div>
             </div>
         </div>
