changed sugo melanzane -> basilico in tilaa page

--- a/tilaa.html
+++ b/tilaa.html
@@ -99,7 +99,7 @@
                             <p><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla</p>
                         </li>
                         <li>
-                            <p><b>Sugo alle melanzane e peperoni Friarielli</b>, tomaattikastike munakoisolla ja Friarielli-paprikalla, 310 g</p>
+                            <p><b>Sugo al basilico</b>, tomaattikastike basilikalla, 310 g</p>
                         </li>
                         <li>
                             <p><b>Frollini Carrube</b>, pikkuleipiä johanneksenleipäpuujauhoista, 100 g</p>
