added fichi secchi page and links to it from tilaa and makupaketti page

--- a/tilaa.html
+++ b/tilaa.html
@@ -96,7 +96,7 @@
                             <p><!--<a href="/colatura-di-menaica" class="black">--><b>Alici di Menaica sott'olio</b>, Menaican sardelleja oliiviöljyssä, 120 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
                         </li>
                         <li>
-                            <p><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla</p>
+                            <p><a href="/fichi-secchi" class="black"><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla, 200 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
                         </li>
                         <li>
                             <p><b>Sugo al basilico</b>, tomaattikastike basilikalla, 310 g</p>
