--- a/fichi-secchi.html
+++ b/fichi-secchi.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Makupaketti - Makulia</title>
+    <title>Fichi secchi - Makulia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,15 +51,12 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul class="nav navbar-nav navbar-right product">
                     <li>
                         <a href="/">Etusivu</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#makupaketti">Makupaketti</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#uutiset">Uutiset</a>
+                        <a href="makupaketti">Makupaketti</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#ota-yhteytta">Ota yhteyttä</a>
@@ -71,146 +68,79 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <header class="makupaketti">
-        <div class="header-content">
-            <div class="header-content-inner">
-                <h1 id="homeHeading">Makupaketti</h1>
-                <hr>
-                <p>Ihastu hedelmällisen Campanian rikkaaseen ruokakulttuuriin! Kokoamme eteläisen Italian täyteläisiä makuja resepteineen Makupakettiin, jonka herkut vaihtuvat aina sesongin mukaan.</p>
-                <!-- <a href="/tilaa" class="page-scroll btn btn-default btn-xl sr-button">Tilaa lokakuun Makupaketti</a> -->
-                <br>
-                <a href="#makupaketti" class="btn btn-xl btn-primary-outline page-scroll">
-                    <i class="fa fa-3x fa-chevron-down white" aria-hidden="true"></i>
-                </a>
-            </div>
-        </div>
-    </header>
-
-<!--
-    <section class="bg-primary">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Kokoamme joulukuun pakettia</h2>
-                    <hr class="light">
-                    <p class="text-faded">Seuraava Makupaketti toimitetaan viikolla 50. Se julkaistaan tällä sivulla marraskuun aikana!</p>
-                </div>
-            </div>
-        </div>
-    </section>
--->
-
-
 
     <section id="makupaketti">
-
         <div class="container">
             <div class="row">
-                <div class="col-md-6 col-md-offset-3 text-center">
-                    <h2 class="section-heading">Campanian joulu</h2>
+                <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+                    <img src="img/products/fichi-mandorle-limone.jpg" class="img-responsive" alt="Kuva: Soppressata di Gioi">
+                    <h2 class="section-heading">Fichi secchi</h2>
                     <hr class="primary">
-                    <p>Tämä Makupaketti tarjoaa mausteisen jouluisia makuja Cilenton kansallispuiston alueelta Campanian sydämestä.</p>
+                    <p class="product-summary">Cilenton valkoiset viikunat ovat kuivattujen hedelmien aatelia. Nämä jouluiset makupalat on täytetty joko mantelilla ja sitruunalla tai saksanpähkinällä, villifenkolilla ja sitrunalla, jotka tuovat rakennetta viikunan pehmeyteen ja särmää sen makeuteen. Murikèn perheyritys ei tingi valmistamiensa tuotteiden laadusta ja kuivatut viikunat on hädin tuskin ehditty pakata ennen kuin kaikki on jo myyty.</p>
+                    <p class="product-summary"><strong>HUOM! Tätä tuotetta on saatavilla rajoitetusti! Kun tuote on loppunut, tällä sivulla näkyy korvaava tuote.</strong></p>
                 </div>
             </div>
-        </div>
-
-        <div class="container">
             <div class="row">
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/scorzette-arancia.jpg" class="img-responsive" alt="Scorzette di arancia -kuva">
-                        <h3>Scorzette di arancia</h3>
-                        <p class="text-muted">Tummalla suklaalla kuorrutetut appelsiininkuoret vievät kielen mennessään</p>
-                    </div>
+                <div class="col-md-6 col-md-offset-3 product padding-top">
+                    <p>Viikuna on Cilenton alueen epävirallinen symboli. Merkintöjä kuivatuista viikunoista osana alueen ruokakulttuuria löytyy jo 600-luvulta ennen ajanlaskumme alkua. <i>Fico bianco del Cilento</i> eli Cilenton valkoinen viikuna on viikunalajike Dottaton ekotyyppi, joka on vuosisatojen saatossa muotoutunut Cilenton alueella. Nimitys on <b>alkuperäsuojattu</b> ja sitä käytetään nimenomaan kuivatusta hedelmästä.</p>
+                    <p>Kuivattu viikuna on keskeinen osa <b>Cilenton ruokaperinnettä</b>. Se on muinoin ollut paikallisille ”köyhäin leipää”, tyypillistä työläisten evästä ja vaikeiden aikojen peruselintarvike, sillä viikunoita kasvaa Cilentossa runsaasti ja kuivatut hedelmät säilyvät ympäri vuoden. 1400-luvulta lähtien viikunoiden tullessa laajemmille markkinoille niistä kehkeytyi arvostettu elintarvike, jota nautitaan edelleen erityisesti joulun aikaan.</p>
+                    <p>Nämä viikunat valmistaa <b>perheyritys Muriké</b>, joka kasvattaa omat viikunansa Cilenton kansallispuiston alueella Morigeratissa. Kylän nimi tulee alun perin kreikankielisestä sanasta Muriké, joka tarkoittaa piiskaherneen maata. Piiskaherne on tuoksuvakukkainen pensas, jonka oksista punottiin ennen viikunoiden kuivaustasoja. Siksi Murikén jokaiseen kuivattujen viikunoiden pakkaukseen on solmittu piiskaherneen pala.</p>
+                    <p>Yrityksen takana on pariskunta Eugenio ja Angela, jotka valmistavat <b>viikunoita käsityönä</b>. Murikén tuotteille on enemmän kysyntää kuin tarjontaa, mutta viikunoita on vain sen verran kuin pariskunnan puissa kunakin vuonna kasvaa. He eivät valmista viikunoita rahan takia vaan ennen kaikkea rakkaudesta hyvään ruokaan ja Morigeratin maihin.</p>
+                    <hr class="primary">
                 </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="/cervellata"><img src="img/products/cervellata.jpg" class="img-responsive" alt="Cervellata -kuva"></a>
-                        <h3>Cervellata</h3>
-                        <p class="text-muted">Gioin cervellata on ihanan pehmeän makuinen ilmakuivattu makkara</p>
-                        <a href="/cervellata" class="more-link">Lue lisää...</a>
+                <div class="col-md-6 col-md-offset-3">
+                    <a href="#tuotetiedot" data-toggle="collapse"><h4 class="text-center">Tuotetiedot</h4></a>
+                    <div id="tuotetiedot" class="collapse">
+                        <div class="col-sm-6">
+                            <h5>Ainesosat Fichi secchi, mandorle, limone</h5>
+                            <ul class="list-unstyled">
+                                <li>Kuivattu viikuna</li>
+                                <li>Manteli</li>
+                                <li>Sitruuna</li>
+                            </ul>
+                            <h5>Ainesosat Fichi secchi, noci, limone, finocchietto</h5>
+                            <ul class="list-unstyled">
+                                <li>Kuivattu viikuna</li>
+                                <li>Saksanpähkinä</li>
+                                <li>Sitruuna</li>
+                                <li>Villifenkolin siemenet</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6 tuotetiedot">
+                            <h5>Paino</h5>
+                            <p>200 g</p>
+                        </div>
                     </div>
+                    
                 </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <!--<a href="/soppressata-di-gioi">--><img src="img/products/valiaika-castagne.jpg" class="img-responsive" alt="Castagne del Prete -kuva"><!--</a>-->
-                        <h3>Castagne del Prete</h3>
-                        <p class="text-muted">Hitaasti paahdettuja kastanjoita</p>
-                        <!--<a href="/soppressata-di-gioi" class="more-link">Lue lisää...</a>-->
-                    </div>
+                <div class="col-xs-12">
+                    <hr class="primary">
                 </div>
-
-                <div class="clearfix"></div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/alici-menaica-sottolio.jpg" class="img-responsive" alt="Alici di Menaica -kuva">
-                        <h3>Alici di Menaica sott'olio</h3>
-                        <p class="text-muted">Menaican sardelleja oliiviöljyssä</p>
-                    </div>
+                <div class="col-md-6 col-md-offset-3 text-center">
+                    <p>Tämän tuotteen löydät Campanian joulu -Makupaketista.</p>
+                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti</a>
                 </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <a href="/fichi-secchi"><img src="img/products/fichi-mandorle-limone.jpg" class="img-responsive" alt="Fichi secchi -kuva"></a>
-                        <h3>Fichi secchi, mandorle, limone</h3>
-                        <p class="text-muted">Kuivatut Cilenton vaaleat viikunat on täytetty manteleilla ja sitruunalla</p>
-                        <a href="/fichi-secchi" class="more-link">Lue lisää...</a>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <img src="img/products/sugo-basilico.jpg" class="img-responsive" alt="Sugo al basilico -kuva">
-                        <h3>Sugo al Basilico</h3>
-                        <p class="text-muted">Tomaattikastike basilikalla</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-6 col-md-offset-3 col-lg-offset-4 text-center">
-                    <div class="service-box">
-                        <img src="img/products/frollini-carrube.jpg" class="img-responsive" alt="Frollini carrube -kuva">
-                        <h3>Frollini Carrube</h3>
-                        <p class="text-muted">Pikkuleipiä johanneksenleipäpuujauhoista</p>
-                    </div>
-                </div>
-
             </div>
         </div>
 
+
+        <!--
         <div class="container" style="padding-top: 25px">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="primary">
-                    <h2 class="section-heading">69 €</h2>
-                    <p>Toimitettuna kotiovellesi Helsingissä</p>
-                    <hr class="primary">
-                    <p>Makupaketin valikoima vaihtuu noin joka toinen kuukausi. Campanian joulu -paketti on tilattavissa 12.12. saakka ja se toimitetaan sinulle 20.12. mennessä.</p>
+                    <p>Makupaketti toimitetaan sinulle lokakuussa Helsinkiin. Valikoima vaihtuu joka toinen kuukausi. Campanian syksy -paketti on tilattavissa syyskuun ajan.</p>
                 </div>
                 <div class="col-lg-12 col-md-12 col-sm-12 text-center">
-                    <a href="/tilaa" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=9KVHM4KYXFKG2" target="_blank" class="btn btn-primary btn-xl page-scroll" style="white-space:normal !important; word-wrap: break-word; word-break: normal">Tilaa Makupaketti tästä</a>
                 </div>
             </div>
         </div>
-
+        -->
     </section>
 
 
-    <section class="bg-primary" id="uutiset">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Makulian Uutiset</h2>
-                    <hr class="light">
-                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
-                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
-                </div>
-            </div>
-        </div>
-    </section>
+    
 <!--
         <div class="container">
             <div class="row">
@@ -225,55 +155,59 @@
             </div>
         </div>
     </section>
-
+-->
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/cilento.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/cilento.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/moscioni.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/moscioni.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Muriké
                                 </div>
                                 <div class="project-name">
-                                    Golfo di Policastro, Salerno
+                                    Kuivattuja täytettyjä viikunoita "moscioni"
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/birds.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/birds.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/thumbnails/morigerati.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/morigerati.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Cilenton kansallispuisto
                                 </div>
                                 <div class="project-name">
-                                    Maanviljelyä kansallispuistossa
+                                    Morigeratin kylä
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/capicollo.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/capicollo.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/fichi-confezioni.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/fichi-confezioni.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilento
+                                    Muriké
                                 </div>
                                 <div class="project-name">
-                                    Capicollo, porsaan niska
+                                    Pakattuja kuivattuja viikunoita
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
+                <!--
                 <div class="col-lg-4 col-sm-6">
                     <a href="img/portfolio/fullsize/carciofini.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/carciofini.jpg" class="img-responsive" alt="">
@@ -319,10 +253,24 @@
                         </div>
                     </a>
                 </div>
+                -->
             </div>
         </div>
     </section>
--->
+
+    <section class="bg-primary" id="uutiset">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">Makulian Uutiset</h2>
+                    <hr class="light">
+                    <p class="text-faded">Saat herkullisia reseptejä ja vinkkejä italialaiseen ruoanlaittoon sekä pääsyn kutsuvierastapahtumiimme, kun liityt postituslistallemme. Lisäksi saat ensimmäisten joukossa tiedon tulevien makupakettien sisällöstä ja tuotteista, joita on saatavilla rajoitetusti.</p>
+                    <a href="http://eepurl.com/cYXjtf" target="_blank" class="btn btn-default btn-xl sr-button">Liity</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
 <!--
     <aside class="bg-dark">
         <div class="container text-center">
