--- a/makupaketti.html
+++ b/makupaketti.html
@@ -119,9 +119,10 @@
 
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
-                        <img src="img/products/scorzette-arancia.jpg" class="img-responsive" alt="Scorzette di arancia -kuva">
+                        <a href="/scorzette-arancia"><img src="img/products/scorzette-arancia.jpg" class="img-responsive" alt="Scorzette di arancia -kuva"></a>
                         <h3>Scorzette di arancia</h3>
                         <p class="text-muted">Tummalla suklaalla kuorrutetut appelsiininkuoret vievät kielen mennessään</p>
+                        <a href="/scorzette-arancia" class="more-link">Lue lisää...</a>
                     </div>
                 </div>
 
