--- a/scorzette-arancia.html
+++ b/scorzette-arancia.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Cervellata - Makulia</title>
+    <title>Scorzette di Arancia - Makulia</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -73,18 +73,15 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                    <img src="img/products/cervellata.jpg" class="img-responsive" alt="Kuva: Cervellata">
-                    <h2 class="section-heading">Cervellata</h2>
+                    <img src="img/products/scorzette-arancia.jpg" class="img-responsive" alt="Kuva: Scorzette di arancia">
+                    <h2 class="section-heading">Scorzette di Arancia</h2>
                     <hr class="primary">
-                    <p class="product-summary">G.IOIn cervellata on ihanan pehmeän makuinen ilmakuivattu makkara. Se on maustettu lempeästi makealla chilillä, villifenkolin siemenillä, valkosipulilla, laakerinlehdillä sekä aavistuksella maksaa, joka sitoo maut täyteläisesti yhteen. Makkaraan käytettävä sianliha kasvatetaan vastuullisesti Gioin kylää ympäröivissä metsissä Cilenton kansallispuistossa.</p>
+                    <p class="product-summary">Tummalla suklaalla kuorrutetut appelsiininkuoret vievät kielen mennessään. Kuorrutteen lohkeavuus ja sisuksen pehmeys luovat hienostuneet puitteet energisen viettelevälle maulle.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 product padding-top">
-                    <p>Cervellata sopii mainiosti <b>alkupalapöytään</b> miedohkojen ja keskivoimakkaiden juustojen kanssa. Viipaleet nautitaan italialaisittain vaalean maalaisleivän ja punaviinilasillisen kera. Muutama viipale ilmakuivattua makkaraa ja leipää yksinkertaisen pasta-annoksen jälkeen on myös yleinen näky.</p>
-                    <p>Tämä cervellata valmistetaan sian selästä ja siihen lisätään vaihtelevasti kinkkua, niskaa ja pekonia. Makkaran maku pyöristyy pehmeäksi maksalla, jonka vaivihkaista läsnäoloa ei helposti huomaa. Cervellata on tehty aitoon suoleen ja sitä on kypsytetty kuukauden ajan. Tämä makkara on valmistettu <strong>täysin käsityönä</strong>, eikä se sisällä lainkaan lisä- tai säilöntäaineita.</p>
-                    <p>Välimeren ruokavalioon kuuluu vähäinen lihan kulutus ja nautittava liha on Etelä-Italiassa usein juuri <strong>ilmakuivattua</strong>. Perinteiseen tapaan sika teurastettiin syksyllä, kun ilma alkoi olla viileämpi lihan käsittelyä varten. Lihaa kuivattiin, jotta sitä voisi nauttia koko tulevan vuoden.</p>
-                    <p>Näiden perinteiden mukaan Piccolo salumificio artigianale G.IOI valmistaa tuotteensa <strong>itse kasvattamistaan sioista</strong>. Siat elävät ulkona laajoilla Gioin kylää ympäröivillä mailla vain kiveheiton päässä itse tuotteiden valmistuspaikasta, joka on pieni keltainen talo kylän keskellä.</p>
+                    <p>Noin vuosi sitten löysin nämä ihanat herkut joulumarkkinoilta. Olin käynyt ihastelemassa Salernon kuuluja jouluvaloja, jotka muuttavat vanhankaupungin kapeat kujat lumotuksi puutarhaksi, kuten erään kujan yllä roikkuva kyltti lupaa. Tuuli puhalsi kylmästi ja olin jo lähdössä, kun sattumalta päädyin keskelle Salernon joulumarkkinoiden iloista hälinää. Murano Dolcessen koju houkutteli minua puoleensa ihanilla herkuillaan. Lopulta mukaan lähteneet appelsiininkuoret tummalla suklaalla tarjosivat niin mehevän makuelämyksen, että haluan nyt jakaa sen kanssanne!</p>
                     <hr class="primary">
                 </div>
                 <div class="col-md-6 col-md-offset-3">
@@ -93,18 +90,22 @@
                         <div class="col-sm-6">
                             <h5>Ainesosat</h5>
                             <ul class="list-unstyled">
-                                <li>Sianliha <i>(kinkku, selkä, maksa)</i>, Italia</li>
-                                <li>Villifenkoli</li>
-                                <li>Valkosipuli</li>
-                                <li>Laakerinlehti</li>
-                                <li>Makea chili</li>
-                                <li>Merisuola</li>
+                                <li>Sokeroidut appelsiininkuoret</li>
+                                <li>Tumma suklaa (sokeri, kaakaovoi, kaakaomassa, emulgointiaine: <b>SOIJA</b>lesitiini)</li>
+                                <li>Suklaan kaakaopitoisuus väh. 63,6 %</li>
+                            </ul>
+                            <ul class="list-unstyled">
+                                <i>
+                                <li>Saattaa sisältää pieniä määriä:</li>
+                                <li>Muiden hedelmien kuorta</li>
+                                <li>Maitoa</li>
+                                <li>Gluteenia</li>
+                                </i>
                             </ul>
                         </div>
                         <div class="col-sm-6 tuotetiedot">
                             <h5>Paino</h5>
-                            <p>N. 360 g</p>
-                            <p>Tuotteen paino vaihtelee hieman, sillä se on tehty käsityönä.</p>
+                            <p>100 g</p>
                         </div>
                     </div>
                     
@@ -157,15 +158,15 @@
             <div class="row no-gutter popup-gallery">
 
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/maiali-gioi2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/maiali-gioi2.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/scorze-candite.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/scorze-candite.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilenton kansallispuisto
+                                    Scorze candite
                                 </div>
                                 <div class="project-name">
-                                    Täällä kasvavat Gioin siat
+                                    Sokeroituja appelsiininkuoria
                                 </div>
                             </div>
                         </div>
@@ -173,15 +174,15 @@
                 </div>
 
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/thumbnails/antipasto.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/antipasto.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/murano-hands.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/murano-hands.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Yhdistä
+                                    Murano Dolcesse
                                 </div>
                                 <div class="project-name">
-                                    Juuston ja aurinkokuivattujen tomaattien kanssa alkupaloiksi, nauti tuoreen leivän kera
+                                    Herra Murano ja suklaapähkinät
                                 </div>
                             </div>
                         </div>
@@ -189,15 +190,15 @@
                 </div>
 
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/view-gioi.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/view-gioi.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/making-scorzette.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/making-scorzette.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Cilenton kansallispuisto
+                                    Murano Dolcesse
                                 </div>
                                 <div class="project-name">
-                                    Näkymä Gioista
+                                    Appelsiininkuoria asetellaan yksitellen kuorrutettaviksi
                                 </div>
                             </div>
                         </div>
