--- a/tilaa.html
+++ b/tilaa.html
@@ -81,22 +81,22 @@
             <div class="row">
                 <div class="col-md-6 col-md-offset-3 product padding-top">
                     <!-- <h3 class="text-center">Tilaus sisältää</h3> -->
-                    <a href="/makupaketti"><h4>Campanian joulu -Makupaketti</h4></a>
+                    <a href="/makupaketti" target="_blank"><h4>Campanian joulu -Makupaketti</h4></a>
                     <ul class="list-unstyled product col-xs-11 col-xs-offset-1">
                         <li>
-                            <p><b>Scorzette di arancia</b>, appelsiininkuoria ja tummaa suklaata, n. 100 g </p>
+                            <p><a href="/scorzette-arancia" target="_blank" class="black"><b>Scorzette di arancia</b>, appelsiininkuoria ja tummaa suklaata, n. 100 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
                         </li>
                         <li>
-                            <p><a href="/cervellata" class="black"><b>Cervellata</b>, ilmakuivattu makkara, n. 360 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
+                            <p><a href="/cervellata" target="_blank" class="black"><b>Cervellata</b>, ilmakuivattu makkara, n. 360 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
                         </li>
                         <li>
-                            <p><!--<a href="/colatura-di-menaica" class="black">--><b>Castagne del Prete</b>, paahdettuja kastanjoita, 250 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
+                            <p><!--<a href="/colatura-di-menaica" target="_blank" class="black">--><b>Castagne del Prete</b>, paahdettuja kastanjoita, 250 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
                         </li>
                         <li>
-                            <p><!--<a href="/colatura-di-menaica" class="black">--><b>Alici di Menaica sott'olio</b>, Menaican sardelleja oliiviöljyssä, 120 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
+                            <p><!--<a href="/colatura-di-menaica" target="_blank" class="black">--><b>Alici di Menaica sott'olio</b>, Menaican sardelleja oliiviöljyssä, 120 g <!--<i class="fa fa-chevron-right" aria-hidden="true"></i></a>--></p>
                         </li>
                         <li>
-                            <p><a href="/fichi-secchi" class="black"><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla, 200 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
+                            <p><a href="/fichi-secchi" target="_blank" class="black"><b>Fichi secchi, mandorle, limone</b>, kuivattuja viikunoita manteleilla ja sitruunalla, 200 g <i class="fa fa-chevron-right" aria-hidden="true"></i></a></p>
                         </li>
                         <li>
                             <p><b>Sugo al basilico</b>, tomaattikastike basilikalla, 310 g</p>
