--- a/fichi-secchi.html
+++ b/fichi-secchi.html
@@ -73,10 +73,10 @@
         <div class="container">
             <div class="row">
                 <div class="text-center col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
-                    <img src="img/products/fichi-mandorle-limone.jpg" class="img-responsive" alt="Kuva: Fichi secchi">
+                    <img src="img/products/fichi-jette-farcite.jpg" class="img-responsive" alt="Kuva: Fichi secchi">
                     <h2 class="section-heading">Fichi secchi</h2>
                     <hr class="primary">
-                    <p class="product-summary">Cilenton valkoiset viikunat ovat kuivattujen hedelmien aatelia. Nämä jouluiset makupalat on täytetty joko mantelilla ja sitruunalla tai saksanpähkinällä, villifenkolilla ja sitrunalla, jotka tuovat rakennetta viikunan pehmeyteen ja särmää sen makeuteen. Murikèn perheyritys ei tingi valmistamiensa tuotteiden laadusta ja kuivatut viikunat on hädin tuskin ehditty pakata ennen kuin kaikki on jo myyty.</p>
+                    <p class="product-summary">Cilenton valkoiset viikunat ovat kuivattujen hedelmien aatelia. Nämä jouluiset makupalat on täytetty saksanpähkinällä, villifenkolilla ja sitrunalla, jotka tuovat rakennetta viikunan pehmeyteen ja särmää sen makeuteen. Murikèn perheyritys ei tingi valmistamiensa tuotteiden laadusta ja kuivatut viikunat on hädin tuskin ehditty pakata ennen kuin kaikki on jo myyty.</p>
                     <p class="product-summary"><strong>HUOM! Tätä tuotetta on saatavilla rajoitetusti! Kun tuote on loppunut, tällä sivulla näkyy korvaava tuote.</strong></p>
                 </div>
             </div>
@@ -92,12 +92,12 @@
                     <a href="#tuotetiedot" data-toggle="collapse"><h4 class="text-center">Tuotetiedot</h4></a>
                     <div id="tuotetiedot" class="collapse">
                         <div class="col-sm-6">
-                            <h5>Ainesosat Fichi secchi, mandorle, limone</h5>
+                            <!--<h5>Ainesosat Fichi secchi, mandorle, limone</h5>
                             <ul class="list-unstyled">
                                 <li>Kuivattu viikuna</li>
                                 <li>Manteli</li>
                                 <li>Sitruuna</li>
-                            </ul>
+                            </ul> -->
                             <h5>Ainesosat Fichi secchi, noci, limone, finocchietto</h5>
                             <ul class="list-unstyled">
                                 <li>Kuivattu viikuna</li>
