--- a/makupaketti.html
+++ b/makupaketti.html
@@ -157,7 +157,7 @@
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <a href="/fichi-secchi"><img src="img/products/fichi-jette-farcite.jpg" class="img-responsive" alt="Fichi secchi -kuva"></a>
-                        <h3>Fichi secchi, noci, finocchietto e limone</h3>
+                        <h3>Fichi jette farcite</h3>
                         <p class="text-muted">Kuivatut Cilenton vaaleat viikunat on täytetty saksanpähkinällä, villifenkolilla ja sitruunalla</p>
                         <a href="/fichi-secchi" class="more-link">Lue lisää...</a>
                     </div>
